style: Fix title text alignment

--- a/new/css/style.css
+++ b/new/css/style.css
@@ -39,7 +39,7 @@ body {
   top: 50%;
   z-index: 5;
   text-align: center;
-  margin-top: -125px;
+  margin-top: -105px;
 }
 
 .TitleMessage .heading p {
@@ -86,7 +86,7 @@ body {
 .sub_heading {
   padding: 10px 0px;
   text-align: center;
-  color: #ffffff9d;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .skillsSection {
